fix: make input value immutable, except by backspacing

--- a/styles/sudoku.module.sass
+++ b/styles/sudoku.module.sass
@@ -63,7 +63,7 @@
 
 
 .cell
-  min-height: 2.2em
+  min-height: 2.5em
   text-align: center
   display: flex
 
@@ -129,7 +129,7 @@
   grid-template-columns: repeat(auto-fill, minmax(30%, 1fr))
   button
     font-size: 1.5em
-    padding: .2em
+    padding: .4em
 
 .buttonContainer
   display: flex
